Projects section alignment fixes

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -54,28 +54,18 @@
   text-align: center;
   margin-top: 2em;
   }
-  
-/* Project Grid */
-.project-grid {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1.3em;
-  margin-bottom: 8em;
-  justify-content: flex-start; 
-  align-items: flex-start;
-  width: 100%; 
-}
+ 
 
 /* Project Grid */
 .project-grid {
   display: grid;
   grid-template-columns: repeat(3, minmax(180px, 280px));
   gap: 2.5em;
-  margin: 2em auto 8em;
   width: 100%;
   max-width: 1024px;
   justify-content: center;
-  padding: 0 1em;
+  margin: 2em 0 6em 0;
+
 }
 
 /* Project Card */
